--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                 <img src="~/images/logo1.png" alt="Advertisement">
             </div>
         </div>
+      
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -48,6 +49,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">खेल</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        @* @if (User.Identity.IsAuthenticated) *@
+                        @if (User?.Identity?.IsAuthenticated == true)
+                        {
+                            <li class="nav-item">
+                                <span class="nav-link text-white">Welcome, @User.Identity.Name!</span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/Account/Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/Account/Login">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
