--- a/Views/Author/CreateNews.cshtml
+++ b/Views/Author/CreateNews.cshtml
@@ -22,6 +22,10 @@
         </select>
     </div>
     <div class="form-group">
+        <label>Title</label>
+        <input type="text" name="Title" class="form-control" required />
+    </div>
+    <div class="form-group">
         <label>Content</label>
         <textarea name="Content" class="form-control" required></textarea>
     </div>
