Modify index page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
         </div>
     </div>
 </div>
-<<!-- First Row: Slider + Small News Cards -->
+<!-- First Row: Slider + Small News Cards -->
 <div class="row">
     <!-- News Slider (col-lg-8) -->
     <div class="col-lg-8">
